# rifdock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brian_build.sh  brian_debug_build.sh  scheme.sublime-project  setup.py  test.py  testbuilt.sh
apps/: quick_test.cc
apps/rosetta/: CMakeLists.txt  rif_dock_test.cc  rif_dock_test.hh  rifgen.cc
apps/rosetta/python/: CMakeLists.txt
apps/rosetta/python/pysetta/: CMakeLists.txt  _pysetta_core_pose.cc  _pysetta_devel.cc
apps/rosetta/python/pysetta/devel/: CMakeLists.txt  __init__.py  devel.cpp
apps/rosetta/python/test/: CMakeLists.txt  example.py  rosetta_wrap_test.cpp  test_pybind.cc
apps/rosetta/riflib/: AtomsCloseTogetherManager.hh  BurialManager.cc  BurialManager.hh  CBTooCloseManager.hh  CMakeLists.txt  DonorAcceptorCache.cc  DonorAcceptorCache.hh  FFTWDock.hh  HBondedPairGenerator.cc  HBondedPairGenerator.hh  HSearchConstraints.hh  HydrophobicManager.cc  HydrophobicManager.hh  RifBase.hh  RifFactory.cc  RifFactory.hh  RotamerGenerator.cc  RotamerGenerator.hh  ScoreRotamerVsTarget.hh  UnsatManager.cc  UnsatManager.hh  rifdock_typedefs.hh  rosetta_field.cc  rosetta_field.hh  rotamer_energy_tables.cc  rotamer_energy_tables.hh  seeding_util.cc  seeding_util.hh  types.hh  util.cc  util.hh  util_complex.cc  util_complex.hh
apps/rosetta/riflib/rif/: RifAccumulators.hh  RifGenerator.hh  RifGeneratorApoHSearch.cc  RifGeneratorApoHSearch.hh  RifGeneratorSimpleHbonds.cc  RifGeneratorSimpleHbonds.hh  RifGeneratorUserHotspots.cc  RifGeneratorUserHotspots.hh  make_hbond_geometries.cc  requirements_util.cc  requirements_util.hh
apps/rosetta/riflib/rifdock_subroutines/: HSearchFactory.hh  clustering.hh  compile_and_filter_results.hh  hack_pack.hh  hsearch_common.hh  hsearch_morph_dive_pop.hh  hsearch_morph_test.hh  hsearch_original.hh  meta.hh  output_results.hh  rosetta_rescore.hh  sketchy_include.hh  util.hh
apps/rosetta/riflib/rifdock_tasks/: CompileAndFilterResultsTasks.cc  CompileAndFilterResultsTasks.hh  FilterForHackPackTask.cc  FilterForHackPackTask.hh  HSearchTasks.cc  HSearchTasks.hh  HackPackTask.cc  HackPackTask.hh  HackPackTasks.cc  HackPackTasks.hh  MorphTasks.cc  MorphTasks.hh  OutputResultsTasks.cc  OutputResultsTasks.hh  RosettaScoreAndMin.cc  RosettaScoreAndMin.hh  RosettaScoreAndMinTasks.cc  RosettaScoreAndMinTasks.hh  SasaTasks.cc  SasaTasks.hh  SeedingPositionTasks.cc  SeedingPositionTasks.hh  SetFaModeTasks.cc  SetFaModeTasks.hh  UtilTasks.cc  UtilTasks.hh
apps/rosetta/riflib/scaffold/: Baseline9AScaffoldProvider.cc  Baseline9AScaffoldProvider.hh  Clustered9AScaffoldProvider.hh  ExtraScaffoldData.hh  FileListScaffoldProvider.cc  FileListScaffoldProvider.hh  MorphingScaffoldProvider.cc  MorphingScaffoldProvider.hh  MultithreadPoseCloner.hh  NineAManager.hh  ScaffoldDataCache.hh  ScaffoldProviderBase.hh  ScaffoldProviderFactory.hh  SingleFileScaffoldProvider.cc  SingleFileScaffoldProvider.hh  morph_util.hh  nineA_util.hh  util.cc  util.hh
apps/rosetta/riflib/task/: AnyPointTask.cc  AnyPointTask.hh  RifDockResultTask.cc  RifDockResultTask.hh  SearchPointTask.cc  SearchPointTask.hh  SearchPointWithRotsTask.cc  SearchPointWithRotsTask.hh  Task.cc  Task.hh  TaskProtocol.cc  TaskProtocol.hh  types.hh  util.cc  util.hh
data/: 1000_random_16A_xforms.x
data/example_flags/: rifdock_patchdock.flag  rifdock_standard.flag  rifgen.flag
data/example_xform_pos/: xform_pos_ang05.x
doc/: index.rst
dox/: Doxyfile
help/: some_rifdock_documentation.md  ubuntu_compile  ubuntu_compile.md
ide/: scheme.sublime-project
ide/Scheme.xcodeproj/: project.pbxproj
scheme/: types.hh
scheme/actor/: Atom.hh  BBStub.gtest.cc  BBStub.hh  BackboneActor.gtest.cc  BackboneActor.hh  VoxelActor.hh
scheme/chemical/: AtomData.hh  RotamerIndex.hh  ligand_factory.hh
scheme/dock/: fftdock.gtest.cc
scheme/io/: cache.hh  dump_pdb_atom.hh
scheme/kinematics/: Director.gtest.cc  Director.hh  Scene.gtest.cc  Scene.hh  SceneBase.hh  SceneIterator.gtest.cc  SceneIterator.hh  Scene_io.hh  Scene_test_eigen.gtest.cc  Scene_test_objective.gtest.cc
scheme/nest/: MultiNEST.gtest.cc  MultiNest.hh  NEST.gtest.cc  NEST.hh  NEST_concepts.hh  NEST_neighbor.gtest.cc
scheme/numeric/: FixedPoint.gtest.cc  FixedPoint.hh  X1dim.hh  bcc_lattice.gtest.cc  bcc_lattice.hh  bcc_lattice_orientation.gtest.cc  euler_angles.gtest.cc  geom_4d.gtest.cc  geom_4d.hh  rand_xform.gtest.cc  rand_xform.hh  util.hh  xform_perf.gtest.cc
scheme/objective/: ObjectiveFunction.gtest.cc  ObjectiveFunction.hh  ObjectiveVisitor.hh
scheme/search/: SpatialBandB.gtest.cc
scheme/util/: SimpleArray.gtest.cc  SimpleArray.hh  bloom.gtest.cc  dilated_int.hh  exit.hh  hash.gtest.cc  hash_thread.gtest.cc
schemelib/scheme/: types.hh
schemelib/test/: CMakeLists.txt  quick_test.cc
src/: types.hh
src/actor/: ActorBBStub.hh  ActorBBStub_test.cc  ActorConcept.hh  ActorConcept_io.hh  Atom.hh  BBStub.gtest.cc  BBStub.hh
src/chemical/: ligand_factory.gtest.cc  ligand_factory.hh  ligand_factory.lib.cc  ligand_factory_test.cc  stub.hh
src/dock/: fftdock.gtest.cc
src/io/: cache.hh  dump_pdb_atom.hh
src/kinematics/: Body.hh  Body_test.cc  Scene.gtest.cc  Scene.hh  SceneIterator.hh  SceneIterator_test.cc  Scene_io.hh  Scene_objective_test.cc  Scene_test.cc  Scene_test_eigen.cc  Scene_test_eigen.gtest.cc  Scene_test_objective.cc  Scene_test_objective.gtest.cc
src/main/: gtest_util.hh  main_test.cc  quick_test.cc  quick_test.cpp
src/nest/: MultiNEST.gtest.cc  NEST.gtest.cc  NEST.hh  NEST.pyx  NEST_concepts.hh  NEST_neighbor_test.cc  NEST_test.cc  NEST_test.hh  NEST_test_util.hh  NEST_wrap.cpp  NEST_wrap.pyx  nest.c  parameter_maps.hh  parameter_maps_test.cc  storage_policy.hh
src/numeric/: X1dim.hh  bcc_lattice.gtest.cc  bcc_lattice.hh  bcc_lattice_orientation.gtest.cc  bcc_lattice_test.cc  euler_angles.gtest.cc  euler_angles.hh  geom_4d.gtest.cc  geom_4d.hh  util.hh
src/objective/: ObjectiveFunction.hh  ObjectiveFunction_io.hh  ObjectiveFunction_test.cc  ObjectiveVisitor.hh
src/rosetta/: atype_map.lib.cc
test/: CMakeLists.txt  quick_test.cc
(+207 files in other folders)
